--- a/index.html
+++ b/index.html
@@ -351,9 +351,15 @@
 
                     <div class="timeline-content">
                         <h4> Software Engineer intern</h4>
-                        <p>Mobile Shared Services Team</p>
-                    </div>
 
+                        <ul>
+                            <li>Designed and implemented a solution for an automated feature flag deprecation
+                                and removal system in Python and Swift.</li>
+                            <li>The system was rolled out to production during the internship and led to a 30% decrease
+                                in active feature flags; this will potentially lead to less feature rollout mistakes in the future.</li>
+                            <li>Additionally, I contributed to access ability in the Bloomberg professional mobile application.</li>
+                        </ul>
+                    </div>
                 </div> <!-- /timeline-block -->
 
 
@@ -370,9 +376,10 @@
 
                     <div class="timeline-content">
                         <h4>Web Solutions Engineer Intern</h4>
-                        <p>- I worked on internal tools, implementing back-end data processing pipelines in Java, and front end development in typescript and angular 2.
-                            - Contributed to accessibility in the Hangouts Chat iOS app by implementing a new speech to text feature on messages in Objective-C which supports 30+ languages and now running in production.
-                        </p>
+                        <ul>
+                            <li>I worked on internal tools, implementing back-end data processing pipelines in Java, and front end development in typescript and angular 2.</li>
+                            <li>Contributed to accessibility in the Hangouts Chat iOS app by implementing a new speech to text feature on messages in Objective-C which supports 30+ languages and now running in production.</li>
+                        </ul>
                     </div>
 
                 </div> <!-- /timeline-block -->
