--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                     </div>
 
                     <div class="link-box">
-                        <a href="https://drive.google.com/file/d/19Vin4ug9lzZLOr_CBWK7ULw0lRIe2aek/view?usp=sharing">Download</a>
+                        <a href="https://apps.apple.com/us/app/face-mouse-tracking/id1546888975">Get it on the App Store</a>
                         <a class="popup-modal-dismiss" href="#">Close</a>
                     </div>
 
