--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                     </div>
 
                     <div class="link-box">
-                        <a href="https://itunes.apple.com/us/app/touch-pong/id1185339859?mt=12">Details</a>
+                        <a href="https://itunes.apple.com/us/app/touch-pong/id1185339859?mt=12">Get it on the App Store</a>
                         <a class="popup-modal-dismiss" href="#">Close</a>
                     </div>
 
@@ -1026,7 +1026,7 @@
                     </div>
 
                     <div class="link-box">
-                        <a href="https://itunes.apple.com/us/app/watch-calculator-professional/id1082742069?mt=8">Details</a>
+                        <a href="https://itunes.apple.com/us/app/watch-calculator-professional/id1082742069?mt=8">Get it on the App Store</a>
                         <a class="popup-modal-dismiss" href="#">Close</a>
                     </div>
 
@@ -1055,7 +1055,7 @@
                     </div>
 
                     <div class="link-box">
-                        <a href="https://itunes.apple.com/us/app/jagdprüfung-gut-grambow/id661647259?mt=8">Details</a>
+                        <a href="https://itunes.apple.com/us/app/jagdprüfung-gut-grambow/id661647259?mt=8">Get it on the App Store</a>
                         <a class="popup-modal-dismiss" href="#">Close</a>
                     </div>
 
@@ -1120,7 +1120,7 @@
                     </div>
 
                     <div class="link-box">
-                        <a href="https://github.com/ferdinandl007/SmartHome">Details</a>
+                        <a href="https://github.com/ferdinandl007/SmartHome">Go to Repository</a>
                         <a class="popup-modal-dismiss" href="#">Close</a>
                     </div>
 
