--- a/index.html
+++ b/index.html
@@ -275,6 +275,28 @@
 
             <div class="timeline-wrap">
 
+
+
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-graduation-cap"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>HKUST</h3>
+                        <p>September 2020 - September 2012</p>
+                    </div>
+
+                    <div class="timeline-content">
+                        <h4>Computer Science, MSc</h4>
+                        <p>In this Masters I focus primarily on machine learning and data mining.</p>
+                    </div>
+
+                </div> <!-- /timeline-block -->
+
+
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
