--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                     <li><a class="smoothscroll" href="#about" title="">About</a></li>
                     <li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
                     <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
-                    <li><a class="smoothscroll" href="#services" title="">Services</a></li>
                     <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
                     <li><a class="smoothscroll" href="#mediaf" title="">Media</a></li>
                     <li><a href="Blog.html" title="">Blog</a></li>
@@ -126,6 +125,7 @@
 
                 <p class="intro-position">
                     <span>Full stack Software Engineer</span>
+                    <span>ML Engineer</span>
                     <span>UI/UX Designer</span>
                 </p>
 
@@ -291,7 +291,7 @@
 
                     <div class="timeline-content">
                         <h4>Computer Science, MSc</h4>
-                        <p>In this Masters I focus primarily on machine learning and data mining.</p>
+                        <p>The master focuses on Research in ML, AI and data mining</p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -1499,10 +1499,9 @@
 
                     <h3 class="stat-count">
                         10
-                    </h3>
 
                     <h5 class="stat-title">
-                        Happy Clients
+                        Heckathorn Attended
                     </h5>
 
                 </div> <!-- /stat -->
@@ -1530,7 +1529,7 @@
                     </div>
 
                     <h3 class="stat-count">
-                        120
+                        134
                     </h3>
 
                     <h5 class="stat-title">
@@ -1562,7 +1561,7 @@
                     </div>
 
                     <h3 class="stat-count">
-                        10000
+                        58789
                     </h3>
 
                     <h5 class="stat-title">
@@ -1579,107 +1578,6 @@
 </section> <!-- /stats -->
 
 
-<!-- services Section
-================================================== -->
-<section id="services">
-
-    <div class="overlay"></div>
-
-    <div class="row section-intro">
-        <div class="col-twelve">
-
-            <h5>Services</h5>
-            <h1>What Can I Do For You?</h1>
-
-            <p class="lead"></p>
-
-        </div>
-    </div> <!-- /section-intro -->
-
-    <div class="row servicses-content">
-
-        <div class="owl-carousel services-list" id="owl-slider">
-
-
-            <div class="service">
-
-                <span class="icon"><i class="icon-toggles"></i></span>
-
-                <div class="service-content">
-
-                    <h3>UI/UX Design</h3>
-
-                    <p class="desc">Are you looking for intuitive and innovative UI and UX in your software
-                        applications, Well then you came to the right place. I offer UI and UX design for a ride range
-                        of applications including iOS, Mac OS, Watch OS, and web apps. Just leave me a message detailing
-                        the project and and use cases and I will create a concept for you.
-                    </p>
-
-                </div>
-
-            </div> <!-- /service -->
-
-
-            <div class="service">
-
-                <span class="icon"><i class="icon-cube"></i></span>
-
-                <div class="service-content">
-
-                    <h3>iOS Development</h3>
-
-                    <p class="desc">Are you in need of a custom iOS, mac OS App solution, for your business or you have
-                        a crazy idea. just contact me via the contact form, I offer full project development meaning you
-                        give me your specifications of the project i will evaluate feasibility and if feasible I will
-                        build it for you!</p>
-
-                </div>
-
-            </div> <!-- /service -->
-
-
-            <div class="service">
-
-                <span class="icon"><i class="icon-earth"></i></span>
-
-                <div class="service-content">
-
-                    <h3>iOT</h3>
-
-                    <p class="desc">Are you need a custom IOT solution, for your business or want to or automate or even
-                        collect data in your home or offices this is all possible with IOT Internet of things devices. I
-                        can build those solutions for you, just leave me a message, and I will evaluate the feasibility
-                        and develop the project for you.
-                    </p>
-
-                </div>
-
-
-            </div> <!-- /service -->
-
-            <div class="service">
-
-                <span class="icon"><i class="icon-terminal"></i></span>
-
-                <div class="service-content">
-
-                    <h3>Software Engineering</h3>
-
-                    <p class="desc">Are you in need of a custom Software solution, for your business or you have a crazy
-                        idea. just contact me via the contact form, I offer full project development meaning you give me
-                        your specifications of the project i will evaluate feasibility and if feasible I will build it
-                        for you!
-                    </p>
-
-                </div>
-
-            </div> <!-- /service -->
-
-        </div> <!-- /services-list -->
-
-    </div> <!-- /services-content -->
-
-</section> <!-- /services -->
 
 
 <!-- contact
